<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_items"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_items" />

        <item
            android:id="@+id/menu_events"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/menu_orders"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/menu_orders" />

        <item
            android:id="@+id/menu_masters"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/menu_masters" />
    </group>
    <item android:title="@string/menu_others">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/menu_users"
                android:title="@string/menu_users" />
            <item
                android:id="@+id/menu_setting"
                android:title="@string/menu_setting" />
        </menu>
    </item>
</menu>